[gd_scene load_steps=4 format=3 uid="uid://dvq24qu8x60wv"]

[ext_resource type="Script" uid="uid://bg7cosqnvgeri" path="res://flashlight.gd" id="1_flashlight"]
[ext_resource type="Texture2D" uid="uid://dvvmbvrj3smlx" path="res://asset/Furnitures/Flashlight.png" id="2_flashlight"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0qj7l"]
height = 44.0

[node name="Flashlight" type="Area2D"]
collision_mask = 2
script = ExtResource("1_flashlight")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5.96046e-08)
scale = Vector2(0.0119987, 0.0163348)
texture = ExtResource("2_flashlight")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("CapsuleShape2D_0qj7l")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
